# temperature-gRPC

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  compose.yaml  local.env
db/migrations/: 0001_books_table.sql
ingestion/: .dockerignore  Dockerfile  ReadCPUTemperatures.ps1  compose.yaml
ingestion/proto/: temperature.proto
ingestion/src/: client.rs  config.rs  server.rs  time_helper.rs  windows_hardware_monitor.rs
migrations/: 0000_amazing_forgotten_one.sql  0001_books_table.sql
migrations/meta/: 0000_snapshot.json  _journal.json
proto/: temperature.proto
src/: client.rs  config.rs  lib.rs  server.rs  time_helper.rs
website/: astro.config.mjs  bun.lockb  drizzle.config.ts  local.env  package.json  pnpm-lock.yaml
website/drizzle/: 0000_mysterious_yellow_claw.sql
website/drizzle/meta/: 0000_snapshot.json  0001_snapshot.json  _journal.json
website/src/components/component/: AreaChart.tsx  Header.astro  Icons.tsx  Layout.astro  Sidebar.astro  SidebarSheet.tsx  UserMenu.tsx
website/src/components/icons/: CalendarIcon.astro  CircleUserIcon.astro  ComputerIcon.astro  HomeIcon.astro  MenuIcon.astro  SettingsIcon.astro  XIcon.astro
website/src/lib/: auth.ts
website/src/lib/db/: migrate.ts  postgres.ts  schema.ts  timescale.ts
website/src/pages/: index.astro  schedule.astro
website/src/pages/login/: index.astro
website/src/pages/login/github/: callback.ts
