[package]
name = "tempurature_grpc"
version = "0.1.0"
edition = "2021"

[dependencies]
tonic = "0.12"
tonic-reflection = "0.12"
tokio = { version = "1.0", features = ["full"] }
prost = "0.13"
prost-types = "0.13"
serde = "1.0.204"
sqlx = { version = "0.7", features = [ "runtime-tokio", "postgres", "time" ] }
wmi = "0.13.3"
anyhow = "1.0.86"
clap = {version = "4.5.9", features = ["derive", "env"]}
time = "0.3.36"

[build-dependencies]
tonic-build = "0.12"

[[bin]] # Bin to run the HelloWorld gRPC server
name = "server"
path = "src/server.rs"

[[bin]] # Bin to run the HelloWorld gRPC client
name = "client"
path = "src/client.rs"

[profile.release]
opt-level = "z"     # Optimize for size.
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = "abort"     # Abort on panic
strip = true        # Automatically strip symbols from the binary.

